WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163582
Remote Web Inspector: Timeline UI not updating while recording
https://bugs.webkit.org/show_bug.cgi?id=163582
Summary
Remote Web Inspector: Timeline UI not updating while recording
Joseph Pecoraro
Reported
2016-10-17 20:20:04 PDT
Summary: Timeline UI not updating while recording Steps to Reproduce: 1. Remotely inspect a page 2. Start a timeline recording => Timeline Overview UI should immediately start playing Notes: - WebInspector.visible is false, so the Timeline UI just bails.
Attachments
[PATCH] Proposed Fix
(1.47 KB, patch)
2016-10-17 20:27 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-10-17 20:20:13 PDT
<
rdar://problem/28766837
>
Joseph Pecoraro
Comment 2
2016-10-17 20:27:29 PDT
Created
attachment 291914
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2016-10-18 10:10:17 PDT
Comment on
attachment 291914
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 291914 Committed
r207466
: <
http://trac.webkit.org/changeset/207466
>
WebKit Commit Bot
Comment 4
2016-10-18 10:10:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug