Remote Web Inspector: Timeline UI not updating while recording https://bugs.webkit.org/show_bug.cgi?id=163582 <rdar://problem/28766837>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-10-18
Reviewed by Timothy Hatcher.

* WebProcess/WebPage/RemoteWebInspectorUI.cpp:
(WebKit::RemoteWebInspectorUI::frontendLoaded):
Local inspector windows keep the web view alive and toggle the
WebInspector.visible state depending on whether or not an inspector is
open. Remote Inspector windows go away when closed, so they can always
be marked as open. This matches earlier remote inspector behavior.

Canonical link: https://commits.webkit.org/181379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207466 268f45cc-cd09-0410-ab3c-d52691b4dbfc